styles/pymakr.less
/* ... */
div.pymakr-feedback {
  position: absolute;
  right: 11px;
  top: -165px;
  width: 350px;
  height: 150px;
  line-height: 25px;
  background: rgb(81, 160, 202);
  padding: 5px 10px;
  color: #fff;
  h2 {
    margin: 7px 0px;
  }

  .feedback-link {
    color: #fff;
    text-decoration: underline;
    cursor: pointer;
    display: inline-block;
    &:hover {
      text-decoration: none;
    }
  }

  .dontshowagain {
    position: absolute;
    bottom: 10px;
    left: 5px;
    display: inline-block;
    padding: 0 5px;
    cursor: pointer;
    text-decoration: underline;
    &:hover {
      background: rgb(130, 210, 252);
    }
  }
  .square {
    position: absolute;
    background: rgb(81, 160, 202);
    right: 12px;
    bottom: -9px;
    width: 20px;
    height: 20px;
    transform: rotate(45deg);
  }
  .close {
    position: absolute;
    top: 4px;
    right: 4px;
    color: #fff;
    width: 16px;
    height: 16px;
    cursor: pointer;
    text-align: center;
    line-height: 16px;
    &:hover {
      background: rgb(130, 210, 252);
    }
  }
}

.pybytes {
  // background-image: url('https://pyauth.pybytes.pycom.io/images/landing-background-sm-up.png');
  font-family: 'Space Mono', 'Roboto', sans-serif;
  &-close {
    background: none;
    border: none;
    position: absolute;
    right: 8px;
    top: 16px;
  }
  &-error {
    color: rgb(218, 23, 23);
    margin-top: 8px;
  }
  &-form-label {
    width: 100%;
    height: 20px;
    margin: 0;
    color: #fff;
    font-family: 'Space Mono', 'Roboto', sans-serif;
    font-size: 14px;
    line-height: 1.42857143;
    margin-top: 16px;
  }
  &-login {
    background: none;
    color: #fff !important;
    background-color: transparent !important;
    padding: 8px 16px;
    border: 1px solid #9b9b9b;
    margin-top: 8px;
    font-size: 14px;
    border-color: #9b9b9b;
    transition: 400ms ease all;
    &:focus {
      border-color: @pycom-primary;
    }
  }
  &-button {
    width: 100%;
    height: 36px;
    margin-top: 16px;
    margin-bottom: 0;
    background: linear-gradient(
      135deg,
      rgba(82, 247, 197, 0) 30%,
      @pycom-primary 100%
    );
    background-color: #4a7994;
    border: none;
    border-radius: 2px;
    transition: all 200ms ease-in-out;
    font-size: 14px;
    font-weight: 500;
    line-height: 1.42857143;
    background: none;
    background-color: @pycom-primary;
    color: #1e1e3c;
    font-weight: bold;
    background-color: aquamarine;
    color: black;
  }
  a {
    color: @text-color-info;
    line-height: 18px;
  }
  h2,
  h3 {
    font-family: bebas-neue, sans-serif;
    font-weight: 400;
    line-height: 1.1;
    margin-top: 20px;
    // color: white;
  }
  .bold {
    color: white;
  }
  .cb-inline {
    cursor: pointer;
    vertical-align: middle;
    span {
      margin-left: 6px;
      color: rgb(210, 210, 210);
    }
  }
  .disabled {
    background-color: #cacaca !important;
    cursor: default;
  }
  .with-underline {
    &::after {
      content: ' ';
      display: block;
      width: 150px;
      height: 3px;
      background-color: @text-color;
      margin-top: 10px;
    }
  }
  &-home {
    a {
      margin-top: 4px;
    }
  }
}

.terminal .xterm-viewport {
  /* On OS X this is required in order for the scroll bar to appear fully opaque */
  background-color: @input-background-color !important;
  overflow-y: scroll;
  overflow-y: scroll;
  cursor: default;
  position: absolute !important;
  right: 0;
  left: 0;
  top: 0;
  bottom: 0;
  z-index: -1;
}

#pymakr-terminal-area {
  .xterm-rows {
    padding-left: 6px !important;
  }
}

.xterm-cursor.xterm-cursor-blink.xterm-cursor-block {
  border: 1px solid @text-color !important;
}
.xterm-dom-renderer-owner-1
  .xterm-rows:not(.xterm-focus)
  .xterm-cursor.xterm-cursor-block {
  outline: 1px solid @text-color-subtle !important;
}
.xterm-rows {
  color: @text-color-highlight !important;
  background-color: @base-border-color !important;
}

